marslistitem: add delete functionality

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -31,3 +31,12 @@ body {
 .MarsListItem__lost {
   text-decoration: line-through;
 }
+
+.MarsList {
+  list-style: none;
+  margin-left: 0;
+}
+
+button.badge {
+  line-height: inherit;
+}
